--- a/package.json
+++ b/package.json
@@ -9,14 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@commitlint/config-conventional": "^17.6.3",
+    "@phosphor-icons/react": "^2.0.9",
+    "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/react-checkbox": "^1.0.3",
+    "@radix-ui/react-dialog": "^1.0.3",
+    "@radix-ui/react-label": "^2.0.1",
+    "@rocketseat/eslint-config": "^1.2.0",
     "@types/node": "20.1.2",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.4"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
